index - добавил хедер

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,37 @@
 node_modules/
 npm-debug.*
 Thumbs.db
+psd/__MACOSX/._device
+psd/__MACOSX/device/._fonts
+psd/__MACOSX/device/._preview
+psd/__MACOSX/device/fonts/._gilroy.zip
+psd/__MACOSX/device/fonts/._open_sans.zip
+psd/__MACOSX/device/fonts/._web
+psd/__MACOSX/device/fonts/web/._gilroyextrabold.woff
+psd/__MACOSX/device/fonts/web/._gilroyextrabold.woff2
+psd/__MACOSX/device/fonts/web/._gilroylight.woff
+psd/__MACOSX/device/fonts/web/._gilroylight.woff2
+psd/__MACOSX/device/fonts/web/._opensans.woff
+psd/__MACOSX/device/fonts/web/._opensans.woff2
+psd/__MACOSX/device/fonts/web/._opensanslight.woff
+psd/__MACOSX/device/fonts/web/._opensanslight.woff2
+psd/__MACOSX/device/preview/._device-catalog.jpg
+psd/__MACOSX/device/preview/._device-index.jpg
+psd/__MACOSX/device/preview/._styleguide.jpg
+psd/device/fonts/gilroy.zip
+psd/device/fonts/gilroy/Gilroyextrabold.ttf
+psd/device/fonts/gilroy/Gilroylight.ttf
+psd/device/fonts/open_sans.zip
+psd/device/fonts/open_sans/OpenSans-Light.ttf
+psd/device/fonts/open_sans/OpenSans-Regular.ttf
+psd/device/fonts/web/gilroyextrabold.woff
+psd/device/fonts/web/gilroyextrabold.woff2
+psd/device/fonts/web/gilroylight.woff
+psd/device/fonts/web/gilroylight.woff2
+psd/device/fonts/web/opensans.woff
+psd/device/fonts/web/opensans.woff2
+psd/device/fonts/web/opensanslight.woff
+psd/device/fonts/web/opensanslight.woff2
+psd/device/preview/device-catalog.jpg
+psd/device/preview/device-index.jpg
+psd/device/preview/styleguide.jpg
