index - сделал сетку хедера

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ psd/device/fonts/web/opensanslight.woff2
 psd/device/preview/device-catalog.jpg
 psd/device/preview/device-index.jpg
 psd/device/preview/styleguide.jpg
+psd/preview/device-index-header-menu.jpg
