--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ psd/device/preview/device-catalog.jpg
 psd/device/preview/device-index.jpg
 psd/device/preview/styleguide.jpg
 psd/preview/device-index-header-menu.jpg
+psd/preview/device-index-slider2.jpg
