index - сверстал третий слайд слайдера

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ psd/device/preview/device-index.jpg
 psd/device/preview/styleguide.jpg
 psd/preview/device-index-header-menu.jpg
 psd/preview/device-index-slider2.jpg
+psd/preview/device-index-slider3.jpg
