--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ psd/device/preview/styleguide.jpg
 psd/preview/device-index-header-menu.jpg
 psd/preview/device-index-slider2.jpg
 psd/preview/device-index-slider3.jpg
+psd/preview/device-index-credit.jpg
+psd/preview/device-index-warranty.jpg
