index - добавил стиль всплывающих окон

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ psd/preview/device-index-slider2.jpg
 psd/preview/device-index-slider3.jpg
 psd/preview/device-index-credit.jpg
 psd/preview/device-index-warranty.jpg
+psd/preview/device-index-write-us-form.jpg
